# Vuoom

./: .gitattributes  .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  biome.json  deny.toml  index.html  mcp_improve.md  mcp_v2_implementation.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/vuoom-capture/: Cargo.toml
crates/vuoom-capture/src/: capture.rs  lib.rs  windows.rs
crates/vuoom-control/: Cargo.toml
crates/vuoom-control/examples/: mock_server.rs
crates/vuoom-control/src/: lib.rs
crates/vuoom-control/tests/: client_auth.rs
crates/vuoom-encode/: Cargo.toml
crates/vuoom-encode/src/: error.rs  export.rs  gifski.rs  image.rs  lib.rs  native.rs  plan.rs  settings.rs
crates/vuoom-input/: Cargo.toml
crates/vuoom-input/src/: clock.rs  dpi.rs  event.rs  inject.rs  keys.rs  lib.rs  normalize.rs  recorder.rs
crates/vuoom-mcp/: Cargo.toml
crates/vuoom-mcp/src/: main.rs
crates/vuoom-preview/: Cargo.toml
crates/vuoom-preview/src/: lib.rs  protocol.rs  server.rs
crates/vuoom-project/: Cargo.toml
crates/vuoom-project/src/: annotation.rs  color.rs  frame.rs  lib.rs  timeline.rs  timing.rs
crates/vuoom-render/: Cargo.toml
crates/vuoom-render/src/: compositor.rs  layout.rs  lib.rs  scene.rs  shapes.rs
crates/vuoom-render/src/shaders/: composite.wgsl  shapes.wgsl
crates/vuoom-zoom/: Cargo.toml
crates/vuoom-zoom/src/: camera.rs  config.rs  edit.rs  event.rs  keyframe.rs  lib.rs  planner.rs
docs/: 00-Research-Index.md  01-Tech-Stack.md  02-Architecture.md  03-Capture.md  04-Input-and-AutoZoom.md  05-Compositing-and-Preview.md  06-Export.md  07-Landscape-and-Positioning.md  08-Roadmap.md  09-Decisions-and-Open-Questions.md  10-Licensing.md  11-Editor-and-Annotations.md  12-CI-CD.md  13-AI-Demo-Director-Research.md  AI_DEMO_DIRECTOR.md  AUTO_UPDATE.md  IMPLEMENTATION-STATUS.md  UI-Upgrade-Plan.md  Vuoom-Spec.md  demo_director_fix_plan.md
src/: AnnotationTools.tsx  App.css  App.tsx  EditorPrimitives.tsx  ExportDialog.tsx  Logo.tsx  RecordOverlay.css  RecordOverlay.tsx  Recorder.css  Recorder.tsx  ScrubField.tsx  Selector.css  Selector.tsx  ThemeMenu.tsx  WindowControls.tsx  dialog.ts  format.ts  geometry.ts  index.tsx  preview.ts  shortcuts.ts  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  runtime.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  control_server.rs  drag_wall.rs  frame_store.rs  hotkey.rs  lib.rs  live_preview.rs  main.rs  mp4.rs  prefs.rs  region_border.rs  session.rs  windows_ext.rs  zoom_chord.rs
src-tauri/windows/: hooks.nsh
