[package]
name = "vuoom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Screen recordings that zoom where it matters — a free, native Windows cinematic screen recorder that exports demo GIFs."

[lib]
# `_lib` suffix avoids a name clash with the binary on Windows (rust-lang/cargo#8519).
name = "vuoom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true

# Engine crates.
vuoom-zoom.workspace = true
vuoom-project.workspace = true
vuoom-encode.workspace = true
vuoom-input.workspace = true
vuoom-capture.workspace = true
vuoom-render.workspace = true
vuoom-preview.workspace = true
