[package]
name = "vuoom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Screen recordings that zoom where it matters — a free, native Windows cinematic screen recorder that exports demo GIFs."

[lib]
# `_lib` suffix avoids a name clash with the binary on Windows (rust-lang/cargo#8519).
name = "vuoom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Guard against two Vuooms running at once: both would race on recovery
# session-id allocation/pruning under %TEMP%/vuoom-recovery and corrupt each
# other's recordings. Must be the first plugin registered (see lib.rs).
tauri-plugin-single-instance = "2"
# Auto-update from GitHub Releases: the updater checks/downloads/installs the
# signed bundle; the process plugin relaunches the app afterwards.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"

glam.workspace = true

# Engine crates.
vuoom-zoom.workspace = true
vuoom-project.workspace = true
vuoom-encode.workspace = true
vuoom-input.workspace = true
vuoom-capture.workspace = true
vuoom-render.workspace = true
vuoom-preview.workspace = true

# Win32 helpers: SetWindowDisplayAffinity (exclude overlays from screen capture),
# CF_HDROP clipboard file copy, hotkey polling. Match the version vuoom-input /
# vuoom-capture resolve to avoid a second `windows` tree.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
] }
