[package]
name = "vuoom-encode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GIF export: frame planning, size estimation, and a pure-Rust (Apache/MIT) animated-GIF encoder (keeps Vuoom Apache-2.0)."

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
png = "0.18"
# Pure-Rust animated-GIF encoder (MIT/Apache), linked — this is the shipping GIF encoder.
# See docs/06-Export.md.
gif = "0.13"
# NeuQuant quantizer (MIT/Apache, already a transitive dep of `gif`) — used directly to
# build ONE global palette for the whole clip so frames can be delta-encoded.
color_quant = "2.0"

[dev-dependencies]
tempfile = "3"
