[package]
name = "vuoom-preview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Live-preview bridge: offscreen RGBA readback → localhost binary WebSocket → webview (WebGPU canvas)."

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
