[package]
name = "vuoom-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "wgpu compositor (DX12): zoom/pan + background + rounded corners (SDF) + shadow + text (glyphon) + annotations (lyon). One device, two sinks."

[dependencies]
glam.workspace = true
vuoom-zoom.workspace = true
vuoom-project.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu = "25"
glyphon = "0.9"
bytemuck.workspace = true
pollster.workspace = true
