[package]
name = "vuoom-zoom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Auto-zoom planner + critically-damped spring camera. No GPU/OS deps — fully unit-testable."

[dependencies]
glam.workspace = true
serde.workspace = true

[dev-dependencies]
# property tests for the planner go here (no off-screen reveal, debounce, frequency limit)
# serde_json backs the backward-compat (de)serialization tests for ZoomKeyframe / ZoomMode.
serde_json.workspace = true
